# dmpower

./: .directory  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANUAL.md  Makefile  README.md  campaign.cpp  campaign.h  characters.cpp  characters.h  colors.h  dmpower  dmpower-settings.ini  dmpower.pro  dungeon_gen.h  gear.cpp  gear.h  gen_dungeon.cpp  gen_dungeon.h  gen_encounter.cpp  gen_encounter.h  gen_insult.cpp  gen_insult.h  gen_name.cpp  gen_name.h  gen_reward.cpp  gen_reward.h  globalfuncts.cpp  globalfuncts.h  item_gen.cpp  item_gen.h  main.cpp  makefile  name_gen.cpp  name_gen.h  (+6 more)
Saves/: readme.md
Source/: Makefile  campaign.cpp  campaign.h  characters.cpp  characters.h  gear.cpp  gear.h  gen_dungeon.cpp  gen_dungeon.h  gen_encounter.cpp  gen_encounter.h  gen_insult.cpp  gen_name.cpp  gen_name.h  gen_reward.cpp  gen_reward.h  globalfuncts.cpp  globalfuncts.h  main.cpp  races.cpp  races.h
exports/: readme.md
res/wip/: characterMenuButtons.xcf  defBeginButton.xcf  defaultItem2.xcf  defaultItem3.xcf  defaultItem4.xcf  defaultItem5.xcf  defaultScene.xcf  magicitemMenu.xcf  randomencounterMenu.xcf  separatorBar.xcf  toolsMenu.xcf
saves/: readme.md
settings/: readme.md
src/: CONTRIBUTORS.md  Makefile  campaign.cpp  campaign.h  character_abilities.cpp  character_background.cpp  character_classes.cpp  character_export.cpp  character_feats.cpp  character_print.cpp  character_random_name.cpp  character_skills.cpp  character_update.cpp  characters.cpp  characters.h  charts.cpp  charts.h  gear.cpp  gear.h  gen_dungeon.cpp  gen_dungeon.h  gen_encounter.cpp  gen_encounter.h  gen_experience.cpp  gen_experience.h  gen_insult.cpp  gen_insult.h  gen_name.cpp  gen_name.h  gen_reward.cpp  gen_reward.h  globalfuncts.cpp  globalfuncts.h  globalfuncts.h.autosave  last_save.cpp  main.cpp  main_loop.cpp  menu.cpp  races.cpp  races.h  (+15 more)
user/exports/: readme.md
user/settings/: readme.md
